--- a/ClientApp/src/app/shared/usuarios/usuarios.component.html
+++ b/ClientApp/src/app/shared/usuarios/usuarios.component.html
@@ -1,4 +1,4 @@
-<div class="usuarios-section">
+<<div class="usuarios-section">
   <h2>Usuarios</h2>
   <app-snackbar #snackbar></app-snackbar>
 
@@ -154,3 +154,4 @@
     </form>
   </mat-card>
 </div>
+>
